# compact-parallel-hash-tables

./: ARTIFACT.md  LICENSE  NOTES.md  README.md  meson.build  python-requirements.txt
benchmarks/: bench.cu  benchmarks.cu  benchmarks.h  benchmarks.sh  figures.py  generate.py  havi.cu  quotient_overhead.cu  rates.cu  timer.h  txttobin.py
examples/: iceberg.cu
include/: bit_width.h  bits.h  cuckoo.cuh  cuda_util.cuh  iceberg.cuh  quotient.cuh  table.cuh  types.h
reference/: havi.csv  rates.csv
test/: test.cu
